src/objects/Major_Incident__c.object
<CustomObject>
    <fields>
        <fullName>Accounts_Impacted__c</fullName>
        <label>Accounts Impacted</label>
        <summaryForeignKey>MI_AccountRelationship__c.Major_Incident__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cases_Impacted__c</fullName>
        <label>Cases Impacted</label>
        <summaryForeignKey>MI_CaseRelationship__c.Major_Incident__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>External_Ticket_Reference__c</fullName>
        <description>SN ticket or other system reference</description>
        <label>External Ticket Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Email_Addresses__c</fullName>
        <description>It contains the email addresses of internal user apart from owner</description>
        <inlineHelpText>Enter email addresses separated by semicolon</inlineHelpText>
        <label>Internal Email Addresses</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Major_Incident_Customer_Communication__c</fullName>
        <label>Major Incident Customer Communication</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Major_Incident_Description__c</fullName>
        <label>Major Incident Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Major_Incident_Internal_Communication__c</fullName>
        <label>Major Incident Internal Communication</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Major_Incident_Subject__c</fullName>
        <label>Major Incident Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Sent_Date_Time__c</fullName>
        <description>As per CSM-1890</description>
        <label>Report Sent Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Report_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>As per CSM - 1890</description>
        <label>Report Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Major Incident</label>
    <nameField>
        <displayFormat>MI-{0000000}</displayFormat>
        <label>Major Incident Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Major Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>MI_CSM_VR1_ValidateInternalCommunication</fullName>
        <active>true</active>
        <description>Checks if record status is going to be in progress and internal communication is empty</description>
        <errorConditionFormula>AND(
				ISPICKVAL(Status__c, &apos;In Progress&apos;),
				LEN(Major_Incident_Internal_Communication__c) = 0
)</errorConditionFormula>
        <errorDisplayField>Major_Incident_Internal_Communication__c</errorDisplayField>
        <errorMessage>Internal Communication field can&apos;t be empty when the status is In Progress</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MI_CSM_VR2_AddCaseWithInternalComms</fullName>
        <active>true</active>
        <description>Need to have at least one case when internal communication in not empty before moving to In progress state</description>
        <errorConditionFormula>AND(
				ISPICKVAL(Status__c, &apos;In Progress&apos;),
				Cases_Impacted__c = 0,
				LEN(Major_Incident_Internal_Communication__c)&gt;0
)</errorConditionFormula>
        <errorMessage>At least one case must be added When Internal Communication is not empty before moving to In Progress status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MI_CSM_VR3_AddAccountWithExternalComms</fullName>
        <active>true</active>
        <description>Need to have at least one account when customer communication in not empty before moving to In progress state</description>
        <errorConditionFormula>AND(
				ISPICKVAL(Status__c, &apos;In Progress&apos;),
				Accounts_Impacted__c = 0,
				LEN(Major_Incident_Customer_Communication__c)&gt;0
)</errorConditionFormula>
        <errorMessage>At least one account must be added When Customer Communication is not empty before moving to In Progress status</errorMessage>
    </validationRules>
</CustomObject>